# StarNet

./: .gitignore  Cargo.toml  README.md
apps/client-ui/: index.html  package.json  vite.config.ts
apps/client-ui/src/: App.tsx
apps/host-ui/: index.html  package.json  vite.config.ts
apps/host-ui/src/: App.tsx
crates/starnet-capture/: Cargo.toml
crates/starnet-capture/src/: lib.rs
crates/starnet-core/: Cargo.toml
crates/starnet-core/src/: lib.rs
crates/starnet-encode/: Cargo.toml
crates/starnet-encode/src/: lib.rs
crates/starnet-input/: Cargo.toml
crates/starnet-input/src/: lib.rs
crates/starnet-signal/: Cargo.toml
crates/starnet-signal/src/: main.rs
crates/starnet-transport/: Cargo.toml
crates/starnet-transport/src/: lib.rs
docs/: architecture.md
server/: Dockerfile
