[workspace]
resolver = "2"
members = [
    "crates/starnet-core",
    "crates/starnet-capture",
    "crates/starnet-input",
    "crates/starnet-transport",
    "crates/starnet-encode",
    "crates/starnet-signal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/starnet/StarNet"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
