[package]
name = "starnet-capture"
version.workspace = true
edition.workspace = true

[dependencies]
starnet-core = { path = "../starnet-core" }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
