[package]
name = "starnet-signal"
version.workspace = true
edition.workspace = true

[[bin]]
name = "starnet-signal"
path = "src/main.rs"

[dependencies]
starnet-core = { path = "../starnet-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
